Fix Track it! link

--- a/_posts/2017-03-27-track-it.md
+++ b/_posts/2017-03-27-track-it.md
@@ -6,7 +6,7 @@ tags: [user-centered design, web design, behavior tracking, collaboration, north
 ---
 I worked with a team to design, test, and develop an interface for a time tracking web application.
 
-[You can check it out here]({{site.baseurl}}/track_it)
+[You can check it out here]({{site.baseurl}}/track_it/index.html)
 
 Credits: Team Space Snakes (Myself, J. Shiler, S. Dobon, W. Lundgren)
 
