"Edits to About and QR Code pages"

--- a/_posts/2017-04-05-qr-code.md
+++ b/_posts/2017-04-05-qr-code.md
@@ -7,7 +7,7 @@ tags:  [alternative reality, experimental, location-based media, web design, nor
 <div style="position:relative;height:0;padding-bottom:75.0%"><iframe src="https://www.youtube.com/embed/Cg0S_O51Kr4?rel=0?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
 *This video is best viewed full-screen on your mobile device with the screen rotation locked.*
 
-<span class="image main"> <a href="{{site.baseurl}}/images/QR_code_map.PNG">![QR Code Map]({{site.baseurl}}/assets/images/QR_code_map.PNG){:align="right" style="width:50%; margin-left:3%;"}</a></span>
+<span class="image main"> <a href="{{site.baseurl}}/assets/images/QR_code_map.PNG">![QR Code Map]({{site.baseurl}}/assets/images/QR_code_map.PNG){:align="right" style="width:50%; margin-left:3%;"}</a></span>
 
 Ever wondered what it's like being a Northwestern tour guide? Well, it doesn't matter. Today you will take on the role of a lifetime and give a unique tour of the sites around the Arts Circle! Don't worry. There aren't actual people waiting for you outside. Instead, we're going to stream this live on Facebook (weather permitting) for all the prospies and their families to see! After this onboarding process, we will be taking our positions at our respective locations and scanning the QR codes that are there to receive our final instructions.
 
