Embellished on some posts.

--- a/_posts/2016-08-28-narratio.md
+++ b/_posts/2016-08-28-narratio.md
@@ -10,7 +10,7 @@ I created several graphics with Adobe After Effects, Illustrator, and Photoshop 
 
 [You can check it out here.](https://www.behance.net/gallery/42485647/Narratio-Graphics)
 
-Narratio began hosting literary workshops around this time, so I followed Ahmed to one of the sessions to document it. It was held at the Alliance For Multicultural Community Services building in Houston, TX, at which dozens of student refugees were participating in other after school extra-curricular activities. I created these short promotional videos from my interviews and video recordings of the event.
+Around this time, Narratio began hosting literary workshops, so I followed Ahmed to one of the sessions to document it. It was held at the Alliance For Multicultural Community Services building in Houston, TX, at which dozens of student refugees were participating in other after school extra-curricular activities. I created these short promotional videos from my interviews and video recordings of the event.
 
 <div style="position:relative;height:0;padding-bottom:56.25%; margin-bottom:2%;"><iframe src="https://player.vimeo.com/video/210158607" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
 
