--- a/_posts/2017-04-05-qr-code.md
+++ b/_posts/2017-04-05-qr-code.md
@@ -4,6 +4,8 @@ title:  "Live at the Arts Circle, It's the (Alternative) NU Tour Guides!"
 date:   2017-04-05
 tags:  [alternative reality, experimental, location-based media, web design, northwestern]
 ---
+The video below is the product of the first implementation of this project. The text below that instructed the participants on how to execute this alternative reality project.
+
 <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/Cg0S_O51Kr4?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
 *This video is best viewed full-screen on your mobile device with the screen rotation locked.*
 
