add new posts, proj map and tower defense

--- a/_posts/2017-03-27-track-it.md
+++ b/_posts/2017-03-27-track-it.md
@@ -4,6 +4,10 @@ title:  "Track It!"
 date:   2017-03-27
 tags: [user-centered design, web design, behavior tracking, collaboration, northwestern]
 ---
+<!-- Include YouTube link to prototyping.
+Include screenshots.
+Maybe even slides. -->
+
 I worked with a team to design, test, and develop an interface for a time tracking web application. The idea came about from our own college experience as we wondered how our time was spent throughout the day. It seemed that on some days we could be diligently productive, but on others, time would seem to slip by. Tangent to the idea of work productivity, we wondered if we could create an app that could help you do more of what you wanted to be doing (working out, building an awesome app) while still balancing your time with what needed to get done.
 
 In the 10 weeks we were given, we decided to drastically simplify our idea and just create a working activity tracking stopwatch with three main features:
@@ -16,11 +20,4 @@ This was our first attempt at making the app and is only a working prototype. We
 
 [You can check it out here.]({{site.baseurl}}/track_it/index.html)
 
-And if you cannot open the link, here are some screenshots:
-
-*Images coming soon*
-
 Credits: Team Space Snakes (Myself, J. Shiler, S. Dobon, W. Lundgren)
-
-<!-- Include YouTube link to prototyping.
-Maybe even slides. -->
