--- a/_posts/2017-04-05-qr-code.md
+++ b/_posts/2017-04-05-qr-code.md
@@ -4,12 +4,14 @@ title:  "Live at the Arts Circle, It's the (Alternative) NU Tour Guides!"
 date:   2017-04-05
 tags:  [alternative reality, experimental, location-based media, web design, northwestern]
 ---
-The video below is the product of the first implementation of this project. The text below instructed the participants on how to execute this alternative reality project.
+The video below is the product of the first implementation of this project.
 
 <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/Cg0S_O51Kr4?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-*This video is best viewed full-screen on your mobile device with the screen rotation locked.*
+*This video is best viewed full-screen on an Android device with the screen rotation locked.*
 
 <span class="image main"> <a href="{{site.baseurl}}/assets/images/QR_code_map.PNG">![QR Code Map]({{site.baseurl}}/assets/images/QR_code_map.PNG){:align="right" style="width:50%; margin-left:3%;"}</a></span>
+
+The text below instructed the participants on how to execute this alternative reality project.
 
 Ever wondered what it's like being a Northwestern tour guide? Well, it doesn't matter. Today you will take on the role of a lifetime and give a unique tour of the sites around the Arts Circle! Don't worry. There aren't actual people waiting for you outside. Instead, we're going to stream this live on Facebook (weather permitting) for all the prospies and their families to see! After this onboarding process, we will be taking our positions at our respective locations and scanning the QR codes that are there to receive our final instructions*.
 
@@ -36,4 +38,4 @@ Talk amongst yourselves to decide who will do what:
 
 You have complete freedom as a tour guide and a camera operator. Be yourself and have fun with it. Remember to scan your QR code for additional instructions. **We will begin timing when we start filming at the first location.**
 
-*\*These final instructions are not included in this post.*
+*\*The additional instructions are not included in this post.*
