I fucked up. but here's what's left after I hard reset

--- a/_posts/2017-03-27-track-it.md
+++ b/_posts/2017-03-27-track-it.md
@@ -8,16 +8,20 @@ tags: [user-centered design, web design, behavior tracking, collaboration, north
 Include screenshots.
 Maybe even slides. -->
 
+### The Project
 I worked with a team to design, test, and develop an interface for a time tracking web application. The idea came about from our own college experience as we wondered how our time was spent throughout the day. It seemed that on some days we could be diligently productive, but on others, time would seem to slip by. Tangent to the idea of work productivity, we wondered if we could create an app that could help you do more of what you wanted to be doing (working out, building an awesome app) while still balancing your time with what needed to get done.
 
+### The Process
 In the 10 weeks we were given, we decided to drastically simplify our idea and just create a working activity tracking stopwatch with three main features:
 
 1) Start and Stop tracking an activity\\
 2) Create a todo list\\
 3) Analyze time spent in a day, or over the course of a week, month, year, etc.
 
+### Results
 This was our first attempt at making the app and is only a working prototype. We focused more on design than functionality, so most of our research was observing users interact with existing apps like A-Tracker and exploring ways to streamline the process of tracking an activity. During the design process, we drafted up 6-7 iterations of our app, starting with paper prototypes and eventually turning it into code with basic HTML, CSS, and JavaScript functionality.
 
-[You can check it out here.]({{site.baseurl}}/track_it/index.html)
+[Link to the TRACK IT! prototype]({{site.baseurl}}/track_it/index.html)\\
+[Source code on Github](https://github.com/khoaxtru20/time_tracker)
 
-Credits: Team Space Snakes (Myself, J. Shiler, S. Dobon, W. Lundgren)
+Team Space Snakes: Jonathan Shiler, Sebastian Dobon, Will Lundgren, and myself
