--- a/_posts/2016-08-28-narratio.md
+++ b/_posts/2016-08-28-narratio.md
@@ -4,14 +4,20 @@ title:  "Narratio"
 date:   2016-08-28
 tags: [non-profit, startup, marketing, youth, education, writing, adobe after effects, adobe premiere pro]
 ---
-Over the summer, I worked with Global Teen Leader, Ahmed Badr, as a marketing manager to help maintain the website of his non-profit organization, [Narratio](https://narratio.org/story/) and related social media.
-
-I created several graphics with Adobe After Effects, Illustrator, and Photoshop to promote new submissions to the website. I posted these on Instagram and Facebook to generate buzz. Some of these images I have posted on my [Behance profile](https://www.behance.net/gallery/42485647/Narratio-Graphics).
-
 <!--Include screenshots-->
 
+### The Project
+Over the summer, I worked with Global Teen Leader, Ahmed Badr, as a marketing manager to help maintain the website of his non-profit organization, [Narratio](https://narratio.org/story/) and related social media.
+
+### Process
+
+#### Social Media Marketing
+I created several graphics with Adobe After Effects, Illustrator, and Photoshop to promote new submissions to the website. I posted these on Instagram and Facebook to generate buzz. Some of these images I have posted on my [Behance profile](https://www.behance.net/gallery/42485647/Narratio-Graphics).
+
+#### Promotional Videos
 Around this time, Narratio began hosting literary workshops, so I followed Ahmed to one of the sessions to document it. It was held at the Alliance For Multicultural Community Services building in Houston, TX, at which dozens of student refugees were participating in other after school extra-curricular activities. I created these short promotional videos from my interviews and video recordings of the event.
 
+### Results
 <div style="position:relative;height:0;padding-bottom:56.25%; margin-bottom:2%;"><iframe src="https://player.vimeo.com/video/210158607" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
 
 <div style="position:relative;height:0;padding-bottom:56.25%; margin-bottom:2%;"><iframe src="https://player.vimeo.com/video/210158708" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
