--- a/_posts/2017-03-27-track-it.md
+++ b/_posts/2017-03-27-track-it.md
@@ -18,10 +18,11 @@ In the 10 weeks we were given, we decided to drastically simplify our idea and j
 2) Create a todo list\\
 3) Analyze time spent in a day, or over the course of a week, month, year, etc.
 
-### Results
 This was our first attempt at making the app and is only a working prototype. We focused more on design than functionality, so most of our research was observing users interact with existing apps like A-Tracker and exploring ways to streamline the process of tracking an activity. During the design process, we drafted up 6-7 iterations of our app, starting with paper prototypes and eventually turning it into code with basic HTML, CSS, and JavaScript functionality.
 
-[Link to the TRACK IT! prototype]({{site.baseurl}}/track_it/index.html)\\
-[Source code on Github](https://github.com/khoaxtru20/time_tracker)
+### Results
+[Link to the TRACK IT! prototype]({{site.baseurl}}/track_it/index.html){: target="\_blank"}\\
+[Source code on Github](https://github.com/khoaxtru20/time_tracker){: target="\_blank"}
 
+<hr>
 Team Space Snakes: Jonathan Shiler, Sebastian Dobon, Will Lundgren, and myself
