Added Omlette Chef post and 2018 updates

--- a/_posts/2018-06-12-skorbord.md
+++ b/_posts/2018-06-12-skorbord.md
@@ -6,9 +6,9 @@ tags: [digital instrument, max msp, northwestern, music, sound]
 ---
 
 ### A Digital Instrument with a Staff-Inspired Interface
-Within ten weeks (less if you don't count the research), I sought to create an instrument that could help students learn how to read music notation. This idea was inspired by a student of mine who was on the autism disorder spectrum, to whom I wanted to teach to recognize notes on a staff. Unfortunately, the traditional method of simultaneously mapping the pitch to the instrument's keys (in our case piano keys) and to its representation on the staff was ineffective since he had an unconventional learning style.
+Within ten weeks, I sought to create an instrument that could help students learn to read music notation. This idea was inspired by a student of mine on the autism disorder spectrum, who was learning to recognize notes on a staff. Unfortunately, the traditional method of mapping both the pitch to an instrument's keys (in our case piano keys) and to its representation on the staff was ineffective since he had an unconventional learning style.
 
-Thinking about this problem more, I wondered in general why music notation had to be taught in this complicated way. Wouldn't it help students, no matter their cognitive ability, if the instrument they used to play musical scores looked exactly like the score itself? Then, there would be less confusion with the key-pitch mapping; the note you see is the note you play which is the note you hear. Below, I describe the **Skorbord**, which is my attempt to solve this issue.
+Thinking about this problem more, I wondered in general why music notation had to be taught in this complicated way. Wouldn't it help students, no matter their cognitive ability, if the instrument used to play musical scores looked exactly like the score itself? Then, wouldn't the pitch-to-key mapping be less confusing? The note you see would be the note you play, which would then be the note you hear. Below, I describe the **Skorbord**, which is my attempt to solve this issue.
 
 <div style="position:relative;height:0;padding-bottom:56.25%; margin-bottom:2%">
 <img src="../assets/images/dl-empty-staff.png" alt="skorbord interface" style="position:absolute;width:100%;height:100%;left:0">
@@ -37,7 +37,7 @@ Through a Max patch, users can change the MIDI instrument to produce a different
 </div>
 *Figure 4: Skorbord's Max patch*
 
-In its current form, the user can play, on the treble clef, notes D3 (using MIDI naming conventions here) to G4. By pressing buttons on the stampers, users can reach pitches by half-steps. This range is similar for the bass clef since I chose not to include any ledger notes. This decision was a practical one since I was short on input pins on the Arudino controller (more technical information below), and I couldn't think of a solution that could incorporate the ledger notes without sacrificing the visual similarity to a staff or the ease of use for the instrumentalist.
+In its current form, the user can play, on the treble clef, notes D3 (using MIDI naming conventions here) to G4. By pressing buttons on the stampers, users can reach pitches by half-steps. This range is similar for the bass clef since I chose not to include any ledger notes. This decision was a practical one since I was short on input pins on the Arudino controller (more technical information below), and I had not yet thought of a solution that could incorporate the ledger notes without sacrificing the visual similarity to a staff or the ease of use for the instrumentalist.
 
 
 ### Skorbord Video Demonstration
@@ -63,13 +63,15 @@ Next, to generate sounds, I connect the controller to my computer and run it thr
 Other physical materials include black foam core for the body, styrofoam cones for the stamps, and aluminum bars for the lines of the staff.
 
 ### Takeaways and future work
-Honestly, other than the theoretical knowledge I gained from reading academic papers, and the hardware hacking sensibilities I gained from workshops and just working with my hands, the biggest lesson learned is that it's hard to solder wire to aluminum bars without sufficient heat, but a clutch solution is **conductive epoxy**. This was such a simple but crucial fix to the obstacle I was having of making consistent connections to the conductive elements of the interface.
+While I weaned much theoretical knowledge from academic papers, and hardware hacking sensibilities from workshops and working with my hands, the biggest lesson learned is...
+
+...that it's hard to solder wire to aluminum bars without sufficient heat.... (I'm more of CS than CE!) However, I did find that a clutch solution is **conductive epoxy**. This was such a simple but crucial fix to the obstacle I was having of making consistent connections to the conductive elements of the interface.
 
 Unfortunately, I never got to test this instrument with my student before the lessons ended for the year, but going forward I would like to have user tests and get feedback to improve the design. However, before testing I will need to solve the latency issue regarding the delay between when the note is played and when the instrument makes a sound. Some part of the logic, whether its in the Arduino code, or the Max patch, is slowing down the processing, and it needs to be addressed.
 
 Finally, as I mentioned at the beginning, I could see this device turning into a full-fledged MIDI controller with buttons and dials to adjust MIDI parameters or flip through samples and sounds.
 
-This was a fun project, and I want to thank Bryan Pardo, Ethan Manilow, Michael Gurevich, and the other Digital Luthiers for their time, knowledge, and advice throughout the process.
+This was a fun project, and I want to thank Dr. Bryan Pardo, Ethan Manilow, Dr. Michael Gurevich, and the other Digital Luthiers for their time, knowledge, and advice throughout the process.
 
 Khoa Truong\\
 Khoa.truong@u.northwestern.edu\\
